# openvino-lab

./: .gitignore  BENCHMARK_PATH_FIX_REPORT.md  COMPLETION_REPORT.md  DOWNLOAD_QUICK_REFERENCE.md  LLAMA_DOCS_INDEX.md  ONE_CLICK_COMPLETE_SUMMARY.md  ONE_CLICK_QUICK_START.md  ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_BENCHMARK_CHECKLIST.md  QUICK_START.md  README.md  README_BENCHMARK.md  pyproject.toml  quick_benchmark.ps1  requirements.txt  run_agent.bat  test_agent_bat.py  test_benchmark.ps1  test_benchmark_gpu.ps1  test_intent_fix.py
config/: .env.example  agent_config.yaml  config.yaml
discussion/: requirements.md
docs/: ANSWER.md  DOCUMENTATION_UPDATE.md  DOWNLOAD_HF_MODEL_GUIDE.md  EMPTY_FOLDER_FIX.md  MODELS.md  MODEL_AND_GIT_GUIDE.md  POWERSHELL_FIX_REPORT.md  PREPARE_MODELS_GUIDE.md  QUICK_FIX_GUIDE.md  QUICK_FIX_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  STAGE_8_IMPLEMENTATION.md  TROUBLESHOOTING.md
docs/benchmark/: COMMON_COMMANDS.md  DOCUMENTATION_REORGANIZATION_REPORT.md  MSVC_INTEGRATION_REPORT.md  MSVC_RUNTIME_GUIDE.md  ONE_CLICK_COMPLETE_SUMMARY.md  ONE_CLICK_INSTALL_GUIDE.md  ONE_CLICK_QUICK_START.md  QUICK_BENCHMARK_CHECKLIST.md  README.md  SCRIPT_MIGRATION_COMPLETE.md  SCRIPT_REORGANIZATION_REPORT.md  STAGE_1_DOWNLOAD_RUNTIME.md  STAGE_2_SETUP_ENVIRONMENT.md  STAGE_3_CREATE_SCRIPT.md  STAGE_3_DOWNLOAD_MODEL.md  STAGE_4_CREATE_SCRIPT.md  STAGE_4_RUN_BENCHMARK.md  STAGE_6_CONFIGURE_DSM_HINTS.md  STAGE_6_UPGRADE_STORAGE_DRIVER.md  STAGE_7_CONFIGURE_DSM_HINTS.md  STATUS_UPDATE_FOR_MANAGER.md
docs/llama/: AI_AGENT_BAT_EXECUTION_GUIDE.md  AI_AGENT_BUG_FIX_REPORT.md  AI_AGENT_COMPLETION_REPORT.md  AI_AGENT_GUIDE.md  AI_AGENT_PLAN.md  AI_AGENT_QUICK_DEMO.md  AI_AGENT_TEST_GUIDE.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  SETUP_PLAN.md
evaluation_requirements/: README.md
examples/: check_llama_env.py  llama_agent.py  llama_batch_inference.py  llama_chatbot.py  llama_quick_start.py  run_llama_chatbot.bat  simple_inference.py
nvme_dsm_test/: run_benchmark_with_official_runtime.ps1
scripts/: BENCHMARK_QUICK_REFERENCE.md  INSTALLATION_FIX_REPORT.md  create_benchmark_script.ps1  download_hf_model.py  download_model.ps1  download_model_interactive.ps1  install_msvc_runtime.ps1  install_openvino_runtime.ps1  prepare_models.ps1  run_benchmark.ps1  run_benchmark.py  run_benchmark_easy.ps1  run_benchmark_with_official_runtime.ps1  run_inference.py  run_inference_simple.py  setup.ps1  test_openvino.py
(+31 files in other folders)
